--- a/Interview/kakaobrain/Q4.md
+++ b/Interview/kakaobrain/Q4.md
@@ -1,3 +1,5 @@
 ## 프로그래밍 외에 다른 다룰 수 있는 툴 혹은 직무 경험이 있으신가요? 있으시다면 어떤 경험을 하셨는지 알려주세요. 없으시다면 프로그래밍 외에 가지고 계신 관심사, 취미에 대해 이야기 해주셔도 좋습니다.
 - 대학교 수업 때, 케드 설계
-학부시절 도면 설계를 위해 CAD 2D 강의를 수강하였습니다. 
+학부 시절 방학 때, 2학기 커리큘럼을 보다가 케드 2D 수업이 있다는 걸 알게 되었습니다. 다른 전공 공부도 바쁜데, 이 수업에서 시간을 아끼자는 생각이 들어 방학 때 급히 공부하게 되었습니다.
+건축학과 친구의 도움을 얻어 케드 책을 빌리게 되었고, 일주일 동안 틈틈이 읽어 결국에는 다 볼 수 있었습니다. 또한 오픈 강의를 통해 실습하면서 케드에 대해 알아가고, 결과적으로 커리큘럼 과제를 해결하는 데는 무리 없이 마무리할 수 있었습니다.
+케드 설계하면서 여러 가지 명령어를 사용하고, 설계하여 모델을 완성하는 과정이 프로그래밍과 유사하다고 생각합니다. 돌이켜 보면 케드를 배웠던 경험이 프로그래밍으로 진로를 바꾸게 되는 계기였다고 생각합니다.
